--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,27 @@
   },
   "about": {
     "title": "About Me",
-    "paragraph1": "As a Software Application Techniques graduate from LaSalle Universitat Ramon Llull, I've built a strong foundation in full-stack development. With over a year at Nexiona Connectocrats, I've honed my skills in back-end Python services, in addition to web application development. My expertise spans developing robust back-end solutions and RESTful APIs, as well as creating intuitive user interfaces and responsive designs.",
+    "paragraph1": "As a Software Application Techniques graduate from LaSalle Ramon Llull University, I've built a strong foundation in full-stack development. With over a year at Nexiona Connectocrats, I've honed my skills in back-end Python services, in addition to web application development. My expertise spans developing robust back-end solutions and RESTful APIs, as well as creating intuitive user interfaces and responsive designs.",
     "paragraph2": "My career goal is to excel in web development, full-stack engineering, or database administration. I'm driven to apply my knowledge to solve technical challenges, always seeking growth opportunities. With a solid educational background and practical experience, including exposure at Fujitsu Technology Solutions, I'm committed to delivering efficient and innovative software solutions."
+  },
+  "education": {
+    "title": "Education",
+    "degrees": {
+      "lasalle": {
+        "degree": "Bachelor's Degree in Software Application Techniques",
+        "institution": "LaSalle Ramon Llull University",
+        "location": "Barcelona, Spain"
+      },
+      "stucom": {
+        "degree": "Higher Degree in Network Computer Systems Administration",
+        "institution": "Stucom Centre d'Estudis",
+        "location": "Barcelona, Spain"
+      },
+      "thalassa": {
+        "degree": "Technological Baccalaureate",
+        "institution": "Institut Thalassa",
+        "location": "Montgat, Spain"
+      }
+    }
   }
 }
