--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -19,5 +19,25 @@
     "title": "Sobre mí",
     "paragraph1": "Como graduado en Técnicas de Aplicaciones de Software por la Universidad LaSalle Ramon Llull, he construido una sólida base en el desarrollo full-stack. Con más de un año en Nexiona Connectocrats, he perfeccionado mis habilidades en servicios back-end de Python, además del desarrollo de aplicaciones web. Mi experiencia abarca el desarrollo de soluciones back-end robustas y API RESTful, así como la creación de interfaces de usuario intuitivas y diseños",
     "paragraph2": "Mi objetivo profesional es sobresalir en el desarrollo web, el desarrollo full-stack o la administración de bases de datos. Me motiva aplicar mis conocimientos para resolver desafíos técnicos y siempre busco oportunidades de crecimiento. Con una sólida formación académica y experiencia práctica, incluyendo mi etapa en Fujitsu Technology Solutions, estoy comprometido a brindar soluciones de software eficientes e innovadoras."
+  },
+  "education": {
+    "title": "Formación Académica",
+    "degrees": {
+      "lasalle": {
+        "degree": "Grado Universitario en Técnicas de Aplicaciones de Software",
+        "institution": "LaSalle Universidad Ramon Llull",
+        "location": "Barcelona, España"
+      },
+      "stucom": {
+        "degree": "Grado Superior de Administración de Sistemas Informáticos en Red",
+        "institution": "Stucom Centro de Estudios",
+        "location": "Barcelona, España"
+      },
+      "thalassa": {
+        "degree": "Bachillerato Tecnológico",
+        "institution": "Instituto Thalassa",
+        "location": "Montgat, España"
+      }
+    }
   }
 }
