fix: capitalize "Full-Stack" in translations

--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -13,7 +13,7 @@
     "linkedinTooltip": "Perfil de LinkedIn",
     "greeting": "Hola,",
     "name": "Sóc l'Àlex Luelmo.",
-    "intro": "Desenvolupador Full-Stack graduat de laSalle amb més d'un any d'experiència. Apassionat pel desenvolupament web, els serveis back-end i la creació de solucions innovadores. Buscant oportunitats per aplicar i desenvolupar les meves habilitats."
+    "intro": "Desenvolupador full-stack graduat de laSalle amb més d'un any d'experiència. Apassionat pel desenvolupament web, els serveis back-end i la creació de solucions innovadores. Buscant oportunitats per aplicar i desenvolupar les meves habilitats."
   },
   "about": {
     "title": "Sobre mi",
