--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,7 +13,7 @@
     "linkedinTooltip": "Perfil de LinkedIn",
     "greeting": "Hola,",
     "name": "Soy Àlex Luelmo.",
-    "intro": "Desarrollador Full-Stack graduado de LaSalle con más de un año de experiencia. Apasionado por el desarrollo web, los servicios back-end y la creación de soluciones innovadoras. Buscando oportunidades para aplicar y desarrollar mis habilidades."
+    "intro": "Desarrollador full-stack graduado de LaSalle con más de un año de experiencia. Apasionado por el desarrollo web, los servicios back-end y la creación de soluciones innovadoras. Buscando oportunidades para aplicar y desarrollar mis habilidades."
   },
   "about": {
     "title": "Sobre mí",
