feat: separate copyright year in footer

--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -151,6 +151,6 @@
     }
   },
   "footer": {
-    "title": "Desenvolupat & Dissenyat per Àlex Luelmo · 2024"
+    "title": "Desenvolupat & Dissenyat per Àlex Luelmo"
   }
 }
