--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,6 +151,6 @@
     }
   },
   "footer": {
-    "title": "Developed & Designed by Àlex Luelmo · 2024"
+    "title": "Developed & Designed by Àlex Luelmo"
   }
 }
