--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -151,6 +151,6 @@
     }
   },
   "footer": {
-    "title": "Desarrollado y Diseñado por Àlex Luelmo · 2024"
+    "title": "Desarrollado y Diseñado por Àlex Luelmo"
   }
 }
