feat: update website metadata and add dynamic title

--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -152,5 +152,8 @@
   },
   "footer": {
     "title": "Desenvolupat & Dissenyat per Àlex Luelmo"
+  },
+  "common": {
+    "portfolio": "Portafolis"
   }
 }
