--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,5 +152,8 @@
   },
   "footer": {
     "title": "Developed & Designed by Àlex Luelmo"
+  },
+  "common": {
+    "portfolio": "Portfolio"
   }
 }
