--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,7 +50,7 @@
         "description": "Development and maintenance of web applications. Back-end development with Python. Implementation of new features and code optimization. Collaboration in the design and development of RESTful APIs. Resolution of issues and technical support."
       },
       "fujitsu": {
-        "position": "Technical, Validation of Software (Intern)",
+        "position": "Software Validation Technician (Intern)",
         "info": "Japanese company in the ICT sector.",
         "location": "Barcelona, Spain",
         "description": "Verification of the different features of the developed software programs to complete their validation."
